--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,8 +36,17 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: ^/register, roles: PUBLIC_ACCESS }
+        - { path: ^/legalsmentions, roles: PUBLIC_ACCESS }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/gestion, roles: ROLE_ORGANISATEUR }
+        # - { path: ^/legalsmentions, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
+
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_ORGANISATEUR, ROLE_USER]
+        ROLE_ORGANISATEUR: ROLE_USER
 
 when@test:
     security:
