update Project Symfony

--- a/.env
+++ b/.env
@@ -28,3 +28,16 @@ APP_SECRET=b92d776c5ff56a525562c9e2ef23ca1b
 DATABASE_URL="mysql://perrault5:perrault5@mmi.unilim.fr/perrault5?serverVersion=10.11.6-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=null://null
+###< symfony/mailer ###
+
+###> symfony/sendgrid-mailer ###
+# MAILER_DSN=sendgrid://KEY@default
+###< symfony/sendgrid-mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://josueperrault56@gmail.com:cybaphdwxmywtwtq@default
+###< symfony/google-mailer ###
