--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,12 @@
         "symfony/flex": "^2",
         "symfony/form": "7.1.*",
         "symfony/framework-bundle": "7.1.*",
+        "symfony/google-mailer": "7.1.*",
+        "symfony/mailer": "7.1.*",
         "symfony/runtime": "7.1.*",
         "symfony/security-bundle": "7.1.*",
         "symfony/security-core": "7.1.*",
+        "symfony/sendgrid-mailer": "7.1.*",
         "symfony/twig-bundle": "7.1.*",
         "symfony/validator": "7.1.*",
         "symfony/yaml": "7.1.*",
